# smart-task-manager

./: .gitignore  CMakeLists.txt
client/: package-lock.json  package.json
client/src/app/: layout.tsx
client/src/app/dashboard/: page.tsx
client/src/app/login/: page.tsx
client/src/app/register/: page.tsx
client/src/components/analytics/: AnalyticsDashboard.tsx
client/src/components/tasks/: CreateTaskModal.tsx  TaskBoard.tsx  TaskCard.tsx
client/src/components/ui/: Providers.tsx
client/src/hooks/: useAuth.ts  useTasks.ts
client/src/lib/: api.ts  queryClient.ts
client/src/store/: index.ts
client/src/store/slices/: authSlice.ts
client/src/types/: index.ts
core/: CMakeLists.txt
core/include/concurrency/: async_persistence.h  background_scheduler.h  thread_pool.h
core/include/smart/: smart_engine.h
core/include/task/: smart_engine.h  task.h  task_manager.h  thread_pool.h
core/src/: smart_engine.cpp  task.cpp  thread_pool.cpp
core/src/concurrency/: async_persistence.cpp  background_scheduler.cpp  thread_pool.cpp
core/src/smart/: smart_engine.cpp
core/src/task/: task_manager.cpp
docs/: SYNC_STRATEGY.md
server/: .env.example  jest.config.ts  package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/prisma/migrations/20260316103936_init/: migration.sql
server/prisma/migrations/20260403142317_add_sync_fields/: migration.sql
server/src/: app.ts  index.ts
server/src/__tests__/: helpers.ts  setup.ts
server/src/__tests__/sync/: sync.test.ts
server/src/config/: env.ts
server/src/controllers/: auth.controller.ts  sync.controller.ts  task.controller.ts
server/src/lib/: logger.ts  prisma.ts
server/src/middleware/: authenticate.ts  errorHandler.ts
server/src/routes/: auth.routes.ts  sync.routes.ts  task.routes.ts
server/src/services/: auth.service.ts  sync.service.ts  task.service.ts
server/src/utils/: errors.ts  jwt.ts
tests/: CMakeLists.txt  smart_engine_test.cpp  task_manager_test.cpp  thread_pool_test.cpp
tests/concurrency/: async_persistence_test.cpp  background_scheduler_test.cpp  thread_pool_test.cpp
tests/smart/: smart_engine_test.cpp
tests/task/: task_manager_test.cpp
